# my-little-todo

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README-CN.md  README.md  biome.json  config.example.toml  docker-compose.yml  docker-entrypoint.sh  mcp-config.example.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: android-release.yml  ci.yml  docker.yml  e2e.yml  release.yml
crates/server/: Cargo.toml
crates/server-bin/: Cargo.toml  build.rs
crates/server-bin/src/: main.rs
crates/server/src/: config.rs  export.rs  extension_registry.rs  history_audit.rs  history_context.rs  lib.rs  task_stream_facade.rs  utils.rs  work_thread_facade.rs
crates/server/src/auth/: external.rs  jwt.rs  middleware.rs  mod.rs
crates/server/src/backup/: mod.rs  s3.rs  traits.rs  webdav.rs
crates/server/src/providers/: mod.rs  mysql.rs  postgres.rs  sqlite.rs  traits.rs
crates/server/src/routes/: admin.rs  ai_proxy.rs  auth.rs  backup.rs  blobs.rs  data.rs  files.rs  history.rs  mcp.rs  mod.rs  plugins.rs  session.rs  stream.rs  sync.rs  tasks.rs
crates/server/tests/: api_integration.rs
docs/architecture/: 00-tech-stack.md  01-data-model.md  02-project-structure.md  03-host-plugin-platform.md  04-foundation-replacement-worklist.md  05-version-history-and-audit.md
docs/brand/: README.md
docs/deployment/: auth-sync-migration.md  binary.md
docs/design-philosophy/: 00-design-constitution.md  01-user-persona.md  02-design-debates.md  03-product-skeleton.md  04-open-questions.md  05-adhd-friendly-design.md  06-user-scenarios.md
docs/design-philosophy/plugins/: README.md  core-feature-modules.md  desktop-widget-design.md  (+4 more)
docs/development/: building.md  getting-started.md  versioning.md
docs/plugins/: README.md  api.md  manifest.md
docs/release/: release-checklist.md  release-checklist.zh-CN.md  release-validation-report.zh-CN.md
docs/testing/: e2e-guide.md
patches/: @milkdown__crepe@7.20.0.patch
scripts/: bump-version.mjs  ensure-tauri-webdriver-tools.mjs  run-e2e-backend.mjs
skills/: SKILL.md
(+16 files in other folders)
